--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "fabric": "^5.2.4",
     "next": "13.0.6",
+    "pdfjs-dist": "^3.1.81",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/fabric": "^4.5.14",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
